# global-methane-forecasting

./: README.md  Reference.md  pyproject.toml
dataprocess/resample/: download.ipynb  resample.py  resampling.ipynb
dataprocess/visualize/: readfile.py  visualize.py
docs/source/: ch4forecast.utils.rst  conf.py
docs/source/_autosummary/: ch4forecast.main.rst  ch4forecast.model.buildmodel.rst  ch4forecast.model.convLSTM.rst  ch4forecast.utils.dataloader.rst
docs/source/_templates/: custom-module-template.rst
src/ch4forecast/: main.py
src/ch4forecast/model/: __init__.py  attention.py  buildmodel.py  convLSTM.py
src/ch4forecast/utils/: __init__.py  dataloader.py
tests/: test_attention.py  test_buildmodel.py  test_convlstm.py
